# xshell-helper2

./: .gitignore  .mcp.json  CLAUDE.md
.claude/skills/deploy-to-pod/: SKILL.md
.claude/skills/deploy-to-pod/references/: env-mapping.md  pod-config.md
.claude/skills/pod-log-analysis/: SKILL.md
.claude/skills/pod-log-analysis/references/: log-triage-playbooks.md  release-package-checklist.md
doc/: multi-session-design.md
docs/superpowers/plans/: 2026-05-15-add-logging-plan.md
docs/superpowers/specs/: 2026-05-15-add-logging-design.md
xshell-mcp/: .xshell-log.json  pyproject.toml
xshell-mcp/bridge/: xshell_bridge.py  xshell_bridge_v2.py  xshell_bridge_v3.py  xshell_bridge_v6.1.py  xshell_bridge_v6.10.py  xshell_bridge_v6.11.py  xshell_bridge_v6.3.py  xshell_bridge_v6.4.py  xshell_bridge_v6.5.py  xshell_bridge_v6.6.py  xshell_bridge_v6.7.py  xshell_bridge_v6.8.py  xshell_bridge_v6.9.py  xshell_bridge_v7.py
xshell-mcp/src/xshell_mcp/: __init__.py  __main__.py  bridge_client.py  config.py  exceptions.py  log_analyzer.py  log_config.py  output_processor.py  protocol.py  server.py  session_manager.py  xshell_launcher.py
xshell-mcp/tests/: test_bridge_client.py  test_log_analyzer.py  test_log_config.py  test_output_processor.py  test_protocol.py
