[project]
name = "xshell-mcp"
version = "0.2.0"
description = "MCP server that lets LLMs execute commands in Xshell terminal sessions"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27.0",
]

[project.scripts]
xshell-mcp = "xshell_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
